--- a/style.css
+++ b/style.css
@@ -21,12 +21,12 @@ body {
 
 h1, h2 {
     margin-bottom: 10px;
-    color: #000000; /* Change this to your desired heading color */
+    color: #49416D; /* Change this to your desired heading color */
 }
 
 p {
     margin-bottom: 20px;
-    color: #313131; /* Change this to your desired paragraph color */
+    color: #5DFDCB; /* Change this to your desired paragraph color */
 }
 
 a {
